infra/continuous-delivery/argo-cd/argocd-dex-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/part-of: argocd
  name: argocd-dex-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-dex-server
    spec:
      containers:
        - command:
            - /shared/argocd-util
            - rundex
          image: quay.io/dexidp/dex:v2.22.0
          imagePullPolicy: Always
          name: dex
          ports:
            - containerPort: 5556
            - containerPort: 5557
            - containerPort: 5558
          volumeMounts:
            - mountPath: /shared
              name: static-files
      serviceAccountName: argocd-dex-server
      volumes:
        - emptyDir: {}
          name: static-files
